@@ -3,7 +3,9 @@ package abstractServer;
 import org.jetbrains.annotations.NotNull;
 
 import java.io.Closeable;
+import java.util.Collections;
 import java.util.List;
+import java.util.concurrent.Executor;
 
 /**
  * This interface provides session methods to work with one exact client.
@@ -51,6 +53,6 @@ public interface Session extends Comparable<Session>, Closeable {
      * @return list of occurred errors.
      */
     default List<Exception> getErrors() {
-        return List.of();
+        return Collections.emptyList();
     }
 }
